# SumPrac-22-webinars

./: .gitignore  README.MD
01-websocket/fastapi-websocket-broadcast/: app.py
02-docker-and-dependency-management/: тезисы.MD
02-docker-and-dependency-management/docker-compose files/: docker-compose.qwerty.yaml  docker-compose.xxx.yaml
02-gitlab-ci/: тезисы.MD
02-gitlab-ci/example/: docker-compose.yml  (+1 more)
04-websocket/fastapi-websocket-tickets-auth/src/: pyproject.toml
04-websocket/fastapi-websocket-tickets-auth/src/api/v1/endpoints/: ticket.py
04-websocket/fastapi-websocket-tickets-auth/src/core/: config.py
04-websocket/fastapi-websocket-tickets-auth/src/enums/: ws.py
04-websocket/fastapi-websocket-tickets-auth/src/models/: device.py  user.py
04-websocket/fastapi-websocket-tickets-auth/src/services/managers/: base.py
05-team/: changelog.MD  codereview.MD  тезисы.MD
06-k8s/: deploy.MD  helm.MD  тезисы.MD
07-plantuml-integration/: тезисы.MD
07-plantuml-integration/example/: docker-compose.yml  pyproject.toml
07-plantuml-integration/example/docs/as_is/: v1.0.0-initial.puml
07-plantuml-integration/example/docs/to_be/: v1.0.0-initial.puml  v1.1.0-something-changed.puml  v1.2.0-something-else-changed.puml
07-plantuml-integration/example/src/: config.py  docs_gen.py  main.py
08-gitlab-ci/: тезисы.MD
08-gitlab-ci/example/src/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml  setup.cfg
08-gitlab-ci/example/src/core/: urls.py
08-gitlab-ci/example/src/core/migrations/: 0001_initial.py  0003_auto_20210216_1402.py  0006_auto_20210222_1421.py  0008_auto_20210310_1342.py  0009_auto_20210310_1343.py  0010_auto_20210312_1212.py
08-gitlab-ci/example/src/core/models/: goal.py  user.py
08-gitlab-ci/example/src/core/services/: email.py  goal.py  helpers.py
08-gitlab-ci/example/src/core/templates/email/: base.html
08-gitlab-ci/example/src/core/tests/: helpers.py
08-gitlab-ci/example/src/core/tests/factories/: goal_factory.py  user_factory.py
08-gitlab-ci/example/src/core/views/: __init__.py  auth.py  goal.py  user.py
08-gitlab-ci/example/src/share_service/: urls.py
database_replication/: sentinel.txt  тезисы.MD
docker_and_python/: teзисы.MD
pubsub/: тезисы.MD
replication/: redis.txt  тезисы.MD
websocket/: тезисы.MD
(+65 files in other folders)
