[tool.poetry]
name = "plantuml-integration"
version = "0.1.0"
description = ""
authors = ["Ruslan Mamleev <ruslan.mamleev@mircod.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
plantuml = "^0.3.0"
uvicorn = "^0.18.1"
six = "^1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
